# ros2_message

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report-parsing.md  bug_decoding.md  bug_parsing.md  bug_report.md
.github/workflows/: rust.yml
examples/: Cargo.toml
examples/examples/: mcap_reading.rs  mcap_simple_iter.rs  mcap_unmapped_iter.rs
ros2_message/: Cargo.toml  README.md
ros2_message/src/: data_type.rs  error.rs  field_info.rs  lib.rs  message_path.rs  msg.rs  srv.rs  time.rs  value.rs
ros2_message/src/dynamic/: decode.rs  mcap.rs  mod.rs
ros2_message/src/parse_msg/: mod.rs  tests.rs
ros2_message/src/tests/: decode.rs  field_info.rs  mod.rs  msg.rs  time.rs
