[package]
authors = [
    "Adnan Ademovic <adnanademovic100@gmail.com>",
    "AKORA <65976562+A-K-O-R-A@users.noreply.github.com>",
]
edition = "2018"
description = "Collection of examples using ros2_message"
license = "MIT"
name = "examples"
version = "0.0.1"

[profile.release]
debug = true

[dependencies]
env_logger = "0.9.0"
# gxhash = "3.4.1"
mcap = "0.9.1"
ros2_message = { path = "../ros2_message" }
serde = "1.0.127"
serde_derive = "1.0.127"
