[package]
edition = "2021"
authors = [
    "AKORA <65976562+A-K-O-R-A@users.noreply.github.com>",
    "Adnan Ademovic <adnanademovic100@gmail.com>",
]
description = "Utilities for handling MSG and SRV files in ROS2"
categories = ["encoding", "parser-implementations", "science::robotics"]
keywords = ["ros", "ros2", "dynamic"]
license = "MIT"
name = "ros2_message"
readme = "../README.md"
repository = "https://github.com/A-K-O-R-A/ros2_message"
documentation = "https://docs.rs/ros2_message/0.0.5/ros2_message/"
version = "0.0.5"
exclude = ["src/tests/*", "src/parse_msg/tests.rs"]

[features]
default = ["mcap", "decode"]
decode = ["dep:byteorder", "dep:rustc-hash"]
mcap = ["decode", "dep:mcap"]

[dependencies]
array-init = "2.0.0"
byteorder = { version = "1.5.0", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
mcap = { version = "0.9.1", optional = true }

hex = "0.4.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
md-5 = "0.9.1"
regex = "1.5.4"
serde = "1.0.127"
serde_derive = "1.0.127"
thiserror = "1.0.61"
derive-where = "1.2.7"


[dev-dependencies]
serde_json = "1.0.66"
