[package]
edition = "2021"
authors = [
    "ReductSoftware UG support@reduct.store>",
    "AKORA <65976562+A-K-O-R-A@users.noreply.github.com>",
    "Adnan Ademovic <adnanademovic100@gmail.com>",
]
description = "Utilities for handling MSG and SRV files in ROS2"
categories = ["encoding", "parser-implementations", "science::robotics"]
keywords = ["ros", "ros2", "dynamic"]
license = "MIT"
name = "ros2_message"
readme = "../README.md"
repository = "https://github.com/reductstore/ros2_message"
version = "0.1.1"
exclude = ["src/tests/*", "src/parse_msg/tests.rs"]

[features]
default = ["decode"]
decode = ["dep:byteorder", "dep:rustc-hash"]

[dependencies]
array-init = "2.0.0"
byteorder = { version = "1.5.0", optional = true }
rustc-hash = { version = "2.1.1", optional = true }

hex = "0.4.3"
itertools = "0.14.0"
lazy_static = "1.4.0"
md-5 = "0.10.6"
regex = "1.5.4"
serde = "1.0.127"
serde_derive = "1.0.127"
thiserror = "2.0.17"
derive-where = "1.6.0"


[dev-dependencies]
serde_json = "1.0.66"
